# OBS-Automate

./: .gitignore  CMakeLists.txt  Input File format.docx  Readme.md  git.sh
examples/: all_src_app.cpp  browser_src_app.cpp  input2.txt  obs_browser_app.cpp  scene_switch_app.cpp  simple_obs_app.cpp  temp  temp.cpp
folder/: Dockerfile  nginx.conf  player.html
src/: Encoder.cpp  Encoder.hpp  Logging.hpp  ObsUtils.cpp  ObsUtils.hpp  Output.cpp  Output.hpp  Scene.cpp  Scene.hpp  Show.cpp  Show.hpp  Source.cpp  Source.hpp  Timer.hpp  Utils.hpp  temp1.cpp
